# Jovian-web-tutorial

./: LICENSE  README.md  app.py  pyproject.toml
templates/: home.html  jobhtml.html
